--- a/style.css
+++ b/style.css
@@ -7,6 +7,21 @@ h2,a
 a{
     text-decoration-line: none;
 }
+a:link {
+    color: #E5E7EB;
+  }
+  a:visited {
+    color: #749ceb;
+  }
+  /* mouse over link */
+  a:hover {
+    color: rgb(148, 145, 145);
+  }
+  
+  /* selected link */
+  a:active {
+    color: rgb(204, 204, 233);
+  } 
 header{
     display:flex;
     background-color: #1f2937;
@@ -53,11 +68,22 @@ button{
     padding:4px;
 }
 .infohead{
+    margin:32px;
     text-align: center;
     font-size:32px;
     font-weight:900;
     color:#1f2937;
 }
-.secondbody{
-    margin:32px;
+.secbodyimg{
+    width:90%;
+    height:50%;
+}
+.secondbodycontainer{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 128px;
+}
+.minicontainer{
+    max-width: 15%;
 }
